# corewar

./: .gitignore  CMakeLists.txt  author
ROOT/Snake/: index.html  script.js  style.css
ROOT/WEB-INF/: web.xml
asm/: Makefile  asm  check.sh  file2.txt  file3.txt  file4.txt  file5.txt  file7.txt  helltrain.cor  helltrain.s  testfile  valgrind-out.txt
asm/asm.dSYM/Contents/Resources/DWARF/: asm
asm/includes/: asm.h  backup_asm.h
asm/src/: init.c  main.c  open.c
asm/src/calc/: calc.c
asm/src/coder/: buffer.c  coder.c  helps.c  print_code_info.c
asm/src/disassembly/: disassembly.c  disassembly.h  instructions_1.c  instructions_2.c  instructions_3.c  instructions_4.c  name_comments.c
asm/src/parser/: analysis.c  parser.c
asm/src/parser/components/mark/: is_mark.c  mark.c
asm/src/parser/components/name_or_comment/: full_string.c  name_or_comment.c
asm/src/parser/components/token/: back_indirect.c  direct.c  indirect.c  label.c  new_token.c  registr.c  token.c
asm/src/parser/error/: errors1.c
asm/src/parser/reader/: comment.c  file_get_contents.c  functions.c
corewar/: Makefile  cchampion.s  check.cor  check.s  check1.cor  check2.cor  check3.cor  corewar  eee  example.txt  file.txt  jchck.cor  jchck.s  matruman.cor  matruman.s  matruman_hrd.s  test.sh  tst  valgrind-out.txt
corewar/corewar.dSYM/Contents/Resources/DWARF/: corewar
corewar/includes/: bpole.h  corewar.h  corewar.h.gch  matruman.h
corewar/src/: helps.c  init.c  main.c
corewar/src/game/: game.c  helps.c
corewar/src/instructions/: helps.c
corewar/src/instructions/functions/: helps.c  inst_13_16.c  inst_1_4.c  inst_1_5.c  inst_5_8.c  inst_6_8.c  inst_9_12.c
corewar/src/memory/: memory_rw.c
corewar/src/reader/: check_file_content.c  is_valid.c  params.c  player.c
corewar/src/visual/: control.c  corewar_loop.c  print_memory.c  render.c  render_inst.c
gnl/: Author  get_next_line.c  get_next_line.h
gnl/libft/: Makefile  ft_bzero.c  ft_explode.c  ft_fstrncpy.c  ft_isalnum.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstcutelem.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strmapi.c  ft_strncat.c  (+8 more)
gnl/libft/includes/: libft.h
includes/: op.h
libft/: Makefile  file_get_content.c  ft_atoi.c  ft_bzero.c  ft_explode.c  ft_fstrncpy.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstcutelem.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstrn.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+25 more)
libft/ft_printf/: Makefile  author
libft/ft_printf/includes/: libft.h
libft/ft_printf/src/: buffer.c  ft_itoa_base.c  ft_printf.c  get_fl.c  get_format.c  get_format_list.c  pf_helps.c  pf_helps1.c  print_conv_cp.c  print_conv_di.c  print_conv_float.c  print_conv_pouxx.c  print_conv_s.c  print_format.c
libft/ft_printf/src/long_arithmetic/: big_int_print.c  la_helps.c  multiplication.c  pow_mult.c  read_long_long.c
libft/gnl/: get_next_line.c
libft/includes/: ft_printf.h  ft_printf_lib.h  get_next_line.h  libft.h  long_arithmetic.h
vm_champs/champs/: jumper.cor  jumper.s  mat.s
vm_champs/champs/examples/: bee_gees.s  bigzork.cor  bigzork.s  fluttershy.cor  fluttershy.s  govno.cor  govno.s  helltrain.cor  helltrain.s
vm_champs/champs/test/: 42.cor  42.s
